--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "body-parser": "^1.17.2",
     "cors": "^2.8.4",
     "express": "^4.15.4",
+    "handlebars": "^4.0.10",
+    "hbs": "^4.0.1",
     "mongoose": "^4.11.9",
     "morgan": "^1.8.2"
   },
